<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/editTextFilterLocationDimension"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toBottomOf="@+id/editTextFilterLocationType"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/textViewFilterLocationDimensionLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/filter_location_dimension"
            app:layout_constraintBaseline_toBaselineOf="@+id/editTextFilterLocationDimension"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/editTextFilterLocationType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toBottomOf="@+id/editTextFilterLocationName"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/textViewFilterLocationTypeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/filter_location_type"
            app:layout_constraintBaseline_toBaselineOf="@+id/editTextFilterLocationType"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textViewCharacterFilterOptionsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/filter_options_for_characters"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewFilterCharacterNameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/filter_character_name"
            app:layout_constraintBaseline_toBaselineOf="@+id/editTextFilterCharacterName"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/editTextFilterCharacterName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toBottomOf="@+id/textViewCharacterFilterOptionsLabel"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/textViewFilterCharacterStatusLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/character_status"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/spinnerFilterCharacterStatus" />

        <Spinner
            android:id="@+id/spinnerFilterCharacterStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/character_status"
            android:minHeight="36dp"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toBottomOf="@+id/editTextFilterCharacterName" />

        <TextView
            android:id="@+id/textViewFilterCharacterSpeciesLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/filter_character_species"
            app:layout_constraintBaseline_toBaselineOf="@+id/editTextFilterCharacterSpecies"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/editTextFilterCharacterSpecies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toBottomOf="@+id/spinnerFilterCharacterStatus"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/textViewFilterCharacterTypeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/filter_character_type"
            app:layout_constraintBaseline_toBaselineOf="@+id/editTextFilterCharacterType"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/editTextFilterCharacterType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toBottomOf="@+id/editTextFilterCharacterSpecies"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/textViewFilterCharacterGenderLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/filter_character_gender"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/spinnerFilterCharacterGender" />

        <Spinner
            android:id="@+id/spinnerFilterCharacterGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/character_gender"
            android:minHeight="36dp"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toBottomOf="@+id/editTextFilterCharacterType" />

        <TextView
            android:id="@+id/textViewFilterOptionsLocationLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/filter_options_for_locations"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinnerFilterCharacterGender" />

        <TextView
            android:id="@+id/textViewFilterLocationNameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/filter_location_name"
            app:layout_constraintBaseline_toBaselineOf="@+id/editTextFilterLocationName"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/editTextFilterLocationName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toBottomOf="@+id/textViewFilterOptionsLocationLabel"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/textViewFilterOptionsEpisodeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/filter_options_for_episodes"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextFilterLocationDimension" />

        <TextView
            android:id="@+id/textViewFilterEpisodeNameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/filter_episode_name"
            app:layout_constraintBaseline_toBaselineOf="@+id/editTextFilterEpisodeName"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/editTextFilterEpisodeName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toBottomOf="@+id/textViewFilterOptionsEpisodeLabel"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/textViewFilterEpisodeCodeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/filter_episode_code"
            app:layout_constraintBaseline_toBaselineOf="@+id/editTextFilterEpisodeCode"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/editTextFilterEpisodeCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toBottomOf="@+id/editTextFilterEpisodeName"
            tools:ignore="LabelFor" />

        <Button
            android:id="@+id/buttonFilter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="4dp"
            android:text="@string/apply_filters"
            app:layout_constraintEnd_toStartOf="@+id/buttonCancel"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextFilterEpisodeCode" />

        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/exit"
            app:layout_constraintBaseline_toBaselineOf="@+id/buttonFilter"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="132dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>